--- a/assets/sass/modules/_vars.scss
+++ b/assets/sass/modules/_vars.scss
@@ -23,10 +23,12 @@ $base-letter-spacing: .1em;
 $purple-color: #473062;
 $orange-color: #f47a20;
 
+$red-color: #ef5133;
 
-$primary-color: $orange-color;
+
+$primary-color: $red-color;
 $secondary-color: #6dcff6; //blue color
-$neutral-color: #fff;
+$neutral-color: #f9f7f1;
 
 $alert-color: #c60f13;
 $success-color: #5da423;
