--- a/assets/sass/partials/_type.scss
+++ b/assets/sass/partials/_type.scss
@@ -17,8 +17,8 @@ body {
 body, select, input, textarea {color: $body-font-color;}
 
 // Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301)
-::-moz-selection{background: rgba($primary-color, .5); color: #fff; text-shadow: none;}
-::selection {background: rgba($primary-color, .5); color: #fff; text-shadow: none;} 
+::-moz-selection{background: $primary-color; color: #fff; text-shadow: none;}
+::selection {background: $primary-color; color: #fff; text-shadow: none;} 
 
 ins {background-color: $primary-color; color: #000; text-decoration: none;}
 mark {background-color: $primary-color; color: #000; font-style: italic; font-weight: bold;}
