--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,18 +428,18 @@ th {
   margin-top: 0;
   margin-bottom: 0;
 }
-.row.collapse > .column, .culture .team .row.collapse > .team-member, .row.collapse > .section-text, .row.collapse > .columns {
+.row.collapse > .column, .row.collapse > .section-text, .row.collapse > .columns {
   padding-left: 0;
   padding-right: 0;
 }
-.row.collapse-outer > .column:first-child, .culture .team .row.collapse-outer > .team-member:first-child, .row.collapse-outer > .section-text:first-child, .row.collapse-outer > .columns:first-child {
+.row.collapse-outer > .column:first-child, .row.collapse-outer > .section-text:first-child, .row.collapse-outer > .columns:first-child {
   padding-left: 0;
 }
-.row.collapse-outer > .column:last-child, .culture .team .row.collapse-outer > .team-member:last-child, .row.collapse-outer > .section-text:last-child, .row.collapse-outer > .columns:last-child {
+.row.collapse-outer > .column:last-child, .row.collapse-outer > .section-text:last-child, .row.collapse-outer > .columns:last-child {
   padding-right: 0;
 }
 
-.column, .culture .team .team-member, .section-text,
+.column, .section-text,
 .columns {
   width: 100%;
   float: left;
@@ -942,7 +942,7 @@ th {
     width: 8.33333%;
   }
 
-  .large-2, .culture .team .team-member {
+  .large-2 {
     width: 16.66667%;
   }
 
@@ -1326,25 +1326,25 @@ body, select, input, textarea {
 }
 
 ::-moz-selection {
-  background: rgba(244, 122, 32, 0.5);
+  background: #ef5133;
   color: #fff;
   text-shadow: none;
 }
 
 ::selection {
-  background: rgba(244, 122, 32, 0.5);
+  background: #ef5133;
   color: #fff;
   text-shadow: none;
 }
 
 ins {
-  background-color: #f47a20;
+  background-color: #ef5133;
   color: #000;
   text-decoration: none;
 }
 
 mark {
-  background-color: #f47a20;
+  background-color: #ef5133;
   color: #000;
   font-style: italic;
   font-weight: bold;
@@ -1405,7 +1405,7 @@ h6 {
 }
 
 a {
-  color: #f47a20;
+  color: #ef5133;
   text-decoration: none;
   line-height: inherit;
   -webkit-transition: 0.2s all linear;
@@ -1414,10 +1414,10 @@ a {
   transition: 0.2s all linear;
 }
 a:hover, a:focus {
-  color: #d6610b;
+  color: #de3211;
 }
 a:link {
-  -webkit-tap-highlight-color: #f47a20;
+  -webkit-tap-highlight-color: #ef5133;
 }
 a img {
   border: none;
@@ -1531,7 +1531,7 @@ blockquote {
   background-color: #fbfbfb;
   margin: 0 0 1em 0;
   padding: 1em;
-  border-left: 6px solid #f47a20;
+  border-left: 6px solid #ef5133;
   color: #888888;
 }
 blockquote p {
@@ -1563,7 +1563,7 @@ acronym {
 }
 abbr:hover,
 acronym:hover {
-  border-color: #f47a20;
+  border-color: #ef5133;
 }
 
 abbr {
@@ -1578,7 +1578,7 @@ abbr {
 .button {
   font-size: .8em;
   font-family: "Locator Web", Helvetica, Arial, sans-serif;
-  color: white;
+  color: #f9f7f1;
   display: inline-block;
   padding: 0.5em 1em;
   margin: 0 .5em 1em;
@@ -1589,23 +1589,23 @@ abbr {
   border-radius: 6px;
 }
 
-.outline-button {
+.outline-button, .contact .button {
   padding: .8em 2em;
-  border: 1px solid rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(249, 247, 241, 0.7);
   opacity: .7;
 }
-.outline-button:hover {
-  color: white;
-  border-color: white;
+.outline-button:hover, .contact .button:hover {
+  color: #f9f7f1;
+  border-color: #f9f7f1;
   opacity: 1;
 }
 
-.orange-button, .top-footer .widget .button, .work .project-single .button, .products .project-single .button {
-  background-color: #f47a20;
+.orange-button {
+  background-color: #ef5133;
 }
-.orange-button:hover, .top-footer .widget .button:hover, .work .project-single .button:hover, .products .project-single .button:hover {
-  color: white;
-  background-color: #d6610b;
+.orange-button:hover {
+  color: #f9f7f1;
+  background-color: #de3211;
 }
 
 /* 
@@ -1626,24 +1626,14 @@ abbr {
   }
 }
 .masthead h1 a {
-  color: white;
+  color: #f9f7f1;
 }
 .masthead h1 a .logo {
   display: block;
-  width: 70px;
-  height: 70px;
-  padding: 17px;
-  background-color: #fff;
-  -webkit-border-radius: 1000px;
-  -moz-border-radius: 1000px;
-  -ms-border-radius: 1000px;
-  -o-border-radius: 1000px;
-  border-radius: 1000px;
+  width: 1.5em;
 }
 .masthead h1 a .logo img {
   display: block;
-  width: 35px;
-  height: 35px;
 }
 .masthead .main-menu {
   line-height: 40px;
@@ -1665,20 +1655,73 @@ abbr {
 .masthead .main-menu ul li a {
   font-size: .8em;
   font-family: "Locator Web", Helvetica, Arial, sans-serif;
-  color: white;
+  color: #f9f7f1;
   opacity: .8;
   padding: 1em;
-  background-position: center 25px;
-  background-size: 22px 10px;
-  -webkit-transition: 0.1s all linear;
-  -moz-transition: 0.1s all linear;
-  -o-transition: 0.1s all linear;
-  transition: 0.1s all linear;
+  background-position: center center;
+  -webkit-transition: 0.2s all linear;
+  -moz-transition: 0.2s all linear;
+  -o-transition: 0.2s all linear;
+  transition: 0.2s all linear;
 }
 .masthead .main-menu ul li a:hover, .masthead .main-menu ul li a.active {
   opacity: 1;
-  background: url("../img/icon-lightning.png") no-repeat center bottom;
-  background-size: 22px 10px;
+  background: url("../img/icon-big-dipper.svg") no-repeat center bottom;
+}
+
+.brand-logo {
+  width: 200px;
+}
+.brand-logo:hover .planet {
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-name: orbit;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+  -moz-animation-name: orbit;
+  -webkit-animation-duration: 5s;
+  -moz-animation-duration: 5s;
+  transform-origin: center center;
+}
+
+@-webkit-keyframes orbit {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes moon {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes orbit {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes moon {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+
+  to {
+    -moz-transform: rotate(360deg);
+  }
 }
 
 /* 
@@ -1689,21 +1732,7 @@ abbr {
 .site-footer {
   text-align: center;
   background-color: #473062;
-  color: white;
-}
-
-.top-footer {
-  background: url("../img/bg-footer.jpg") center center scroll;
-  background-size: cover;
-  padding: 2.75em 0;
-}
-.top-footer .widget h3 {
-  color: white;
-  opacity: .8;
-}
-.top-footer .widget p {
-  font-size: .9em;
-  opacity: .6;
+  color: #f9f7f1;
 }
 
 .bottom-footer {
@@ -1726,7 +1755,7 @@ abbr {
 .bottom-footer .logo {
   width: 50px;
   height: 50px;
-  background-color: white;
+  background-color: #f9f7f1;
   display: block;
   position: absolute;
   left: 50%;
@@ -1754,7 +1783,7 @@ abbr {
 .footer-nav ul li a {
   font-family: "Locator Web", Helvetica, Arial, sans-serif;
   font-size: .8em;
-  color: white;
+  color: #f9f7f1;
   opacity: .5;
   padding: 1em;
 }
@@ -1795,7 +1824,7 @@ abbr {
   color: #444444;
 }
 .author-widget .view-more:hover {
-  color: #f47a20;
+  color: #ef5133;
 }
 
 /* Newsletter Widget Styles */
@@ -1805,43 +1834,83 @@ abbr {
   *
   */
 .homepage .hero {
-  background: url("../img/hero-rocket.jpg") center center scroll;
+  background: url("../img/bg-nebula.jpg") center center scroll;
   background-size: cover;
 }
-.homepage .sample-project {
-  background-color: #473062;
+
+.work {
+  background-color: #ef5133;
   text-align: center;
-  min-height: 450px;
+  min-height: 350px;
   overflow: hidden;
   position: relative;
+  	/*.project-device {
+  		position: absolute;
+  		left: 50%;
+  		@include transform(translateX(-50%) );
+  
+  		bottom: -420px;
+  		@include transition(.25s all linear);
+  	}
+  
+  	&:hover .project-device {
+  		bottom: -365px;
+  	}*/
 }
-.homepage .sample-project h2 {
-  font-size: 2em;
-  color: white;
-  line-height: 1.1;
+.work h2 {
+  color: #f9f7f1;
+  line-height: 1;
+  margin-bottom: .2em;
 }
-.homepage .sample-project p {
-  font-size: .9em;
-  color: white;
+.work p {
+  font-size: 1.3em;
+  font-style: italic;
+  font-weight: 100;
+  color: #f9f7f1;
   max-width: 20em;
   margin: 0 auto;
 }
-.homepage .sample-project .project-device {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
-  bottom: -420px;
-  -webkit-transition: 0.25s all linear;
-  -moz-transition: 0.25s all linear;
-  -o-transition: 0.25s all linear;
-  transition: 0.25s all linear;
+
+.services .note {
+  color: #ef5133;
 }
-.homepage .sample-project:hover .project-device {
-  bottom: -365px;
+.services .note h2 {
+  color: #ef5133;
+  line-height: 1;
+}
+.services ul.service-group {
+  list-style: none;
+  margin-left: 0;
+  margin-bottom: 1.5em;
+  padding: 0;
+}
+.services ul.service-group li {
+  font-size: .8em;
+  margin-bottom: .3em;
+}
+.services ul.service-group h4 {
+  font-size: 1.1em;
+  margin-bottom: 1em;
+}
+
+.contact {
+  background: url("../img/moon-lander.jpg") bottom right scroll;
+  background-size: cover;
+  padding: 2.75em 0 8em;
+  text-align: center;
+}
+.contact h2, .contact h3 {
+  color: #f9f7f1;
+  line-height: 1;
+}
+.contact h3 {
+  font-size: 1.5em;
+  font-family: "Chaparral Pro", Georgia, sans-serif;
+  font-style: italic;
+  font-weight: 100;
+}
+.contact h2 {
+  text-transform: uppercase;
 }
 
 /*
@@ -1876,103 +1945,307 @@ abbr {
 }
 
 /*
-  *
-  * Work
-  *
-  */
-.work .hero {
-  background: url("../img/hero-astronaut.jpg") center center scroll;
-  background-size: cover;
-}
-.work .project-single h3 {
-  font-size: 1em;
-  font-style: italic;
-  font-family: "Chaparral Pro", Georgia, sans-serif;
-  margin: 0;
-}
-.work .project-single h2 {
-  font-size: 2em;
-  margin-top: 0;
-}
-.work .project-single p {
-  max-width: 22em;
-}
-.work .project-single .button {
-  margin-left: 0;
-}
-.work .project-turn {
-  background: url("../img/bg-turn.jpg") center center scroll;
-  background-size: cover;
-}
-.work .project-turn h2, .work .project-turn h3, .work .project-turn p {
-  color: white;
-}
-.work .project-frito-lay {
-  background-color: #0fcfc5;
+ * jQuery FlexSlider v2.2.0
+ * http://www.woothemes.com/flexslider/
+ *
+ * Copyright 2012 WooThemes
+ * Free to use under the GPLv2 license.
+ * http://www.gnu.org/licenses/gpl-2.0.html
+ *
+ * Contributing author: Tyler Smith (@mbmufffin)
+ */
+/* Browser Resets
+*********************************/
+.flex-container a:active,
+.flexslider a:active,
+.flex-container a:focus,
+.flexslider a:focus {
+  outline: none;
 }
 
-.client-list {
-  background: url(../img/pattern-cube.png) repeat;
+.slides,
+.flex-control-nav,
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
-.client-list img {
+
+/* Icon Fonts
+*********************************/
+/* Font-face Icons */
+@font-face {
+  font-family: 'flexslider-icon';
+  src: url("../fonts/flexslider-icon.eot");
+  src: url("../fonts/flexslider-icon.eot?#iefix") format("embedded-opentype"), url("../fonts/flexslider-icon.woff") format("woff"), url("../fonts/flexslider-icon.ttf") format("truetype"), url("../fonts/flexslider-icon.svg#flexslider-icon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* FlexSlider Necessary Styles
+*********************************/
+.flexslider {
+  margin: 0;
+  padding: 0;
+}
+
+.flexslider .slides > li {
+  display: none;
+  -webkit-backface-visibility: hidden;
+}
+
+/* Hide the slides before the JS is loaded. Avoids image jumping */
+/*.flexslider .slides img {width: 100%; display: block;}*/
+.flex-pauseplay span {
+  text-transform: capitalize;
+}
+
+/* Clearfix for the .slides element */
+.slides:after {
+  content: "\0020";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+html[xmlns] .slides {
+  display: block;
+}
+
+* html .slides {
+  height: 1%;
+}
+
+/* No JavaScript Fallback */
+/* If you are not using another script, such as Modernizr, make sure you
+ * include js that eliminates this class on page load */
+.no-js .slides > li:first-child {
+  display: block;
+}
+
+/* FlexSlider Default Theme
+*********************************/
+.flexslider {
+  position: relative;
+  zoom: 1;
+}
+
+.flex-viewport {
+  max-height: 2000px;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+.loading .flex-viewport {
+  max-height: 300px;
+}
+
+.flexslider .slides {
+  zoom: 1;
+}
+
+.carousel li {
+  margin-right: 5px;
+}
+
+/* Direction Nav */
+.flex-direction-nav {
+  *height: 0;
+}
+
+.flex-direction-nav a {
+  text-decoration: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: -20px 0 0;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  overflow: hidden;
+  opacity: 0;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.flex-direction-nav .flex-prev {
+  left: -50px;
+}
+
+.flex-direction-nav .flex-next {
+  right: -50px;
+  text-align: right;
+}
+
+.flexslider:hover .flex-prev {
+  opacity: 0.7;
+  left: 10px;
+}
+
+.flexslider:hover .flex-next {
+  opacity: 0.7;
+  right: 10px;
+}
+
+.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {
+  opacity: 1;
+}
+
+.flex-direction-nav .flex-disabled {
+  opacity: 0 !important;
+  filter: alpha(opacity=0);
+  cursor: default;
+}
+
+.flex-direction-nav a:before {
+  font-family: "flexslider-icon";
+  font-size: 40px;
+  display: inline-block;
+  content: '\f001';
+}
+
+.flex-direction-nav a.flex-next:before {
+  content: '\f002';
+}
+
+/* Pause/Play */
+.flex-pauseplay a {
+  display: block;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+  opacity: 0.8;
+  z-index: 10;
+  overflow: hidden;
+  cursor: pointer;
+  color: #000;
+}
+
+.flex-pauseplay a:before {
+  font-family: "flexslider-icon";
+  font-size: 20px;
+  display: inline-block;
+  content: '\f004';
+}
+
+.flex-pauseplay a:hover {
+  opacity: 1;
+}
+
+.flex-pauseplay a.flex-play:before {
+  content: '\f003';
+}
+
+/* Control Nav */
+.flex-control-nav {
   width: 100%;
-}
-
-/*
-  *
-  * Products
-  *
-  */
-.products .hero {
-  background: url("../img/hero-ship.jpg") center center scroll;
-  background-size: cover;
-}
-.products .project-single:nth-child(odd) {
-  background-color: #efefef;
-}
-.products .project-single h3 {
-  font-size: 1em;
-  font-style: italic;
-  font-family: "Chaparral Pro", Georgia, sans-serif;
-  margin: 0;
-}
-.products .project-single h2 {
-  font-size: 2em;
-  margin-top: 0;
-}
-.products .project-single p {
-  max-width: 22em;
-}
-.products .project-single .button {
-  margin-left: 0;
-}
-
-/*
-  *
-  * Culture
-  *
-  */
-.culture .hero {
-  background-size: cover;
-}
-.culture .team {
-  background: url(../img/pattern-cube.png) repeat;
-}
-.culture .team .team-member {
+  position: absolute;
+  bottom: -40px;
   text-align: center;
 }
-.culture .team .team-member h3 {
-  font-size: 1em;
+
+.flex-control-nav li {
+  margin: 0 6px;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+}
+
+.flex-control-paging li a {
+  width: 11px;
+  height: 11px;
+  display: block;
+  background: #666;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  text-indent: -9999px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -o-border-radius: 20px;
+  border-radius: 20px;
+  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+.flex-control-paging li a:hover {
+  background: #333;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.flex-control-paging li a.flex-active {
+  background: #000;
+  background: rgba(0, 0, 0, 0.9);
+  cursor: default;
+}
+
+.flex-control-thumbs {
+  margin: 5px 0 0;
+  position: static;
+  overflow: hidden;
+}
+
+.flex-control-thumbs li {
+  width: 25%;
+  float: left;
+  margin: 0;
+}
+
+.flex-control-thumbs img {
+  width: 100%;
+  display: block;
+  opacity: .7;
+  cursor: pointer;
+}
+
+.flex-control-thumbs img:hover {
+  opacity: 1;
+}
+
+.flex-control-thumbs .flex-active {
+  opacity: 1;
+  cursor: default;
+}
+
+@media screen and (max-width: 860px) {
+  .flex-direction-nav .flex-prev {
+    opacity: 1;
+    left: 10px;
+  }
+
+  .flex-direction-nav .flex-next {
+    opacity: 1;
+    right: 10px;
+  }
+}
+body {
+  background-color: #f8fafb;
 }
 
 .hero {
   background-color: #151414;
   text-align: center;
-  min-height: 500px;
   position: relative;
+  overflow: hidden;
+}
+@media screen and (min-width: 600px) {
+  .hero {
+    min-height: 600px;
+  }
 }
 .hero .hero-content {
-  margin: 2.5em 0;
+  margin: 2.5em 0 6em;
 }
 @media screen and (min-width: 600px) {
   .hero .hero-content {
@@ -2001,7 +2274,7 @@ abbr {
   }
 }
 .hero h2, .hero h3 {
-  color: white;
+  color: #f9f7f1;
 }
 .hero h3 {
   font-size: 1.2em;
@@ -2028,7 +2301,7 @@ abbr {
   font-size: 1em;
 }
 
-.avatar, .author-widget .author-avatar, .culture .team .team-member img {
+.avatar, .author-widget .author-avatar {
   width: 6em;
   max-width: 100px;
   -webkit-border-radius: 1000px;
@@ -2036,4 +2309,10 @@ abbr {
   -ms-border-radius: 1000px;
   -o-border-radius: 1000px;
   border-radius: 1000px;
+}
+
+.triforce {
+  width: 30px;
+  margin: 2em auto;
+  display: block;
 }
