--- a/assets/sass/partials/pages/_home.scss
+++ b/assets/sass/partials/pages/_home.scss
@@ -8,7 +8,7 @@
 .homepage {
 
 	.hero {
-		background: url('../img/hero-rocket.jpg') center center scroll;
+		background: url('../img/bg-nebula.jpg') center center scroll;
 		background-size: cover;
 
 		.hero-content {
@@ -22,41 +22,102 @@
 		}
 	}
 
-	.sample-project {
-		background-color: $purple-color;
-		text-align: center;
+} // end .home
 
-		min-height: 450px;
-		overflow: hidden;
-		position: relative;
+.work {
+	background-color: $red-color;
+	text-align: center;
+
+	min-height: 350px;
+	overflow: hidden;
+	position: relative;
+
+	h2 {
+		//font-size: 2em;
+		color: $neutral-color;
+		line-height: 1;
+		margin-bottom: .2em;
+	}
+
+	p {
+		font-size: 1.3em;
+		font-style: italic;
+		font-weight: 100;
+		color: $neutral-color;
+		max-width: 20em;
+		margin: 0 auto;
+	}
+
+	/*.project-device {
+		position: absolute;
+		left: 50%;
+		@include transform(translateX(-50%) );
+
+		bottom: -420px;
+		@include transition(.25s all linear);
+	}
+
+	&:hover .project-device {
+		bottom: -365px;
+	}*/
+} // end .work
+
+.services {
+
+	.note {
+		color: $primary-color;
 
 		h2 {
-			font-size: 2em;
-			color: $neutral-color;
-			line-height: 1.1;
-		}
-
-		p {
-			font-size: .9em;
-			color: $neutral-color;
-			max-width: 20em;
-			margin: 0 auto;
-		}
-
-		.project-device {
-			position: absolute;
-			left: 50%;
-			@include transform(translateX(-50%) );
-
-			bottom: -420px;
-			@include transition(.25s all linear);
-		}
-
-		&:hover .project-device {
-			bottom: -365px;
+			color: $primary-color;
+			line-height: 1;
 		}
 	}
-	
-	
 
-} // end .home
+	ul.service-group {
+		list-style: none;
+		margin-left: 0;
+		margin-bottom: 1.5em;
+		padding: 0;
+
+		li {
+			font-size: .8em;
+			margin-bottom: .3em;
+		}
+
+		h4 {
+			font-size: 1.1em;
+			margin-bottom: 1em;
+		}
+	}
+
+} // end .services
+
+// contact section
+.contact {
+	background: url('../img/moon-lander.jpg') bottom right scroll;
+	background-size: cover;
+	padding: 2.75em 0 8em;
+	text-align: center;
+	
+	h2, h3 {
+		//text-align: center;
+		color: $neutral-color;
+		line-height: 1;
+	}
+
+	h3 {
+		font-size: 1.5em;
+		font-family: $serif-font;
+		font-style: italic;
+		font-weight: 100;
+	}
+
+	h2 {
+		text-transform: uppercase;
+	}
+
+	.button {
+		@extend .outline-button;
+		//margin: 0 auto;
+	}
+}
