--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,9 +6,10 @@
 // browser reset
 @import "partials/_normalize";
 
+// modules
 @import "modules/_vars";
 
-
+// global
 @import "partials/_grid";
 @import "partials/_global";
 @import "partials/_layout";
@@ -22,22 +23,27 @@
 // Pages
 @import "partials/pages/_home";
 @import "partials/pages/_blog";
-@import "partials/pages/_work";
-@import "partials/pages/_products";
-@import "partials/pages/_culture";
+
+// Vendor
+@import "vendor/_flexslider";
 
 
-
+body {
+	background-color: $body-bg;
+}
 
 .hero {
 	background-color: #151414;
 	text-align: center;
-  	//padding: 2.75em 0;
-  	min-height: 500px;
   	position: relative;
+  	overflow: hidden;
+
+  	@media screen and (min-width: $small-screen) {
+		min-height: 600px;
+  	}
 
   	.hero-content {
-  		margin: 2.5em 0;
+  		margin: 2.5em 0 6em;
 
   		@media screen and (min-width: $small-screen) {
 			position: absolute;
@@ -112,4 +118,10 @@
 	width: 6em;
 	max-width: 100px;
 	@include border-radius($global-rounded);
+}
+
+.triforce {
+	width: 30px;
+	margin: 2em auto;
+	display: block;
 }
