--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1296,6 +1296,7 @@ body,
   width: 100%;
   height: auto;
   padding: 2.75em 0;
+  padding: 2.75rem 0;
 }
 
 #main {
@@ -1377,7 +1378,12 @@ h1 {
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 2.2em;
+}
+@media screen and (min-width: 600px) {
+  h2 {
+    font-size: 3em;
+  }
 }
 
 h3 {
@@ -1841,26 +1847,14 @@ abbr {
 .work {
   background-color: #ef5133;
   text-align: center;
-  min-height: 350px;
-  overflow: hidden;
   position: relative;
-  	/*.project-device {
-  		position: absolute;
-  		left: 50%;
-  		@include transform(translateX(-50%) );
-  
-  		bottom: -420px;
-  		@include transition(.25s all linear);
-  	}
-  
-  	&:hover .project-device {
-  		bottom: -365px;
-  	}*/
 }
 .work h2 {
   color: #f9f7f1;
   line-height: 1;
   margin-bottom: .2em;
+  margin-top: 1.5em;
+  margin-top: 2.75rem;
 }
 .work p {
   font-size: 1.3em;
@@ -1869,6 +1863,30 @@ abbr {
   color: #f9f7f1;
   max-width: 20em;
   margin: 0 auto;
+}
+@media screen and (max-width: 768px) {
+  .work .flex-direction-nav {
+    display: none;
+  }
+  .work .project-device {
+    margin: 2em auto -14em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work .project-device {
+    margin-top: 3em;
+    -webkit-transition: 0.25s all linear;
+    -moz-transition: 0.25s all linear;
+    -o-transition: 0.25s all linear;
+    transition: 0.25s all linear;
+  }
+  .work .flexslider .slides > li {
+    position: relative;
+    height: 350px;
+  }
+  .work:hover .project-device {
+    margin-top: 0;
+  }
 }
 
 .services .note {
@@ -2069,8 +2087,7 @@ html[xmlns] .slides {
   overflow: hidden;
   opacity: 0;
   cursor: pointer;
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  color: rgba(249, 247, 241, 0.5);
   -webkit-transition: all .3s ease;
   -moz-transition: all .3s ease;
   transition: all .3s ease;
@@ -2152,6 +2169,7 @@ html[xmlns] .slides {
   position: absolute;
   bottom: -40px;
   text-align: center;
+  display: none;
 }
 
 .flex-control-nav li {
@@ -2284,7 +2302,6 @@ body {
   margin: 0;
 }
 .hero h2 {
-  font-size: 2.2em;
   margin-top: 0;
 }
 
